add bagian summary dan index

--- a/Belajar Frontend Website/Belajar HTML untuk Pemula/Membuat Struktur Website/Praktikum/index.html
+++ b/Belajar Frontend Website/Belajar HTML untuk Pemula/Membuat Struktur Website/Praktikum/index.html
@@ -35,5 +35,8 @@
         <div>
             <p>Belajar html <span>dan <br> css</span> bagi pemula <br> untuk membangun website <br> dari nol</p>
         </div>
+
+        <!-- Doctype HTML -->
+        <!DOCTYPE html>
     </body>
 </html>
