revisi bagian HTML bagi Pemula

--- a/Belajar Frontend Website/Belajar HTML untuk Pemula/Berkenalan dengan HTML/Praktikum/index.html
+++ b/Belajar Frontend Website/Belajar HTML untuk Pemula/Berkenalan dengan HTML/Praktikum/index.html
@@ -1,6 +1,6 @@
 <html>
     <head> 
-        <title>Sekolah Koding</title>
+        <title>Belajar HTML</title>
     </head>
     <body>
         Selamat Datang
