--- a/Belajar Frontend Website/Belajar HTML untuk Pemula/Mengenal lebih banyak element/Praktikum/index.html
+++ b/Belajar Frontend Website/Belajar HTML untuk Pemula/Mengenal lebih banyak element/Praktikum/index.html
@@ -2,16 +2,17 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>Belajar HTML</title>
+        <title>Sekolah Koding</title>
     </head>
     <body>
         <!-- Heading -->
-        <h1>Belajar HTML</h1>
-        <h2>Belajar HTML</h2>
-        <h3>Belajar HTML</h3>
-        <h4>Belajar HTML</h4>
-        <h5>Belajar HTML</h5>
-        <h6>Belajar HTML</h6>
+        <h1>Sekolah Koding</h1>
+        <h2>Sekolah Koding</h2>
+        <h3>Sekolah Koding</h3>
+        <h4>Sekolah Koding</h4>
+        <h5>Sekolah Koding</h5>
+        <h6>Sekolah Koding</h6>
+        <!-- Akhir Heading -->
 
         <!-- Paragraf -->
         <p>Selamat datang di website kami</p>
